fixing spacing

--- a/src/css/nav.css
+++ b/src/css/nav.css
@@ -1,5 +1,4 @@
 .context, .context .title {
-  display: block;
   width: 100%;
   overflow: visible;
 }
@@ -12,11 +11,13 @@
 /* Context title alignment and spacing */
 .context .nav-link {
   margin-left: 0 !important;
-  padding-left: 0 !important;
+  padding: 0.5rem 0.5rem !important;
   font-weight: bold;
   display: inline-block;
   line-height: 1.4;
-  padding-bottom: 1.2em;
+  border-radius: 3px;
+  vertical-align: middle;
+  padding-left: 0 !important;
 }
 
 .context {
@@ -355,9 +356,8 @@ html.dark-theme .riscvlogo--dark {
 
 .nav-panel-menu .context .title {
   font-weight: bold;
-  display: block;
-  height: 24px;
-  line-height: 24px;
+  display: flex;
+  align-items: center;
   padding-right: 30px;
   margin-bottom: 4px;
   white-space: nowrap;
